--- a/src/app/component/home/home.component.html
+++ b/src/app/component/home/home.component.html
@@ -1,23 +1,22 @@
 <div class="container">
   <div class="photo">
-    <img src="" alt="">
-  </div>
+    <i class="fas fa-user"></i>  </div>
   <div class="bloc">
     <div class="infos">
-      <p>Nom Prenom</p>
-      <p>Status(Entrepreneur)</p>
+      <p>{{user?.username}}</p>
+      <p *ngFor="let role of user?.roles">Status {{ tolowerRole(role.name) }}</p>
       <p>Adresse</p>
     </div>
       <!-- ******************************presentation******************************************************** -->
-
+   
     <div class="presentation">
       <div class="mb-3">
         <label for="exampleFormControlTextarea1" class="form-label">Présentation: </label>
         <textarea class="form-control" id="exampleFormControlTextarea1" rows="3">
         </textarea>
       </div>
+      <i class="far fa-edit"></i>
     </div>
   </div>
-  <button>Modifier</button>
-  <button>Annuler</button>
+  <i class="fas fa-user-edit"></i>
 </div>
