--- a/src/app/component/projet/projet.component.html
+++ b/src/app/component/projet/projet.component.html
@@ -1,15 +1,15 @@
-<div class="container" (ngSubmit)="onSubmit()">
+<form class="container" (ngSubmit)="onSubmit()" [formGroup]="projectForm">
   <!-- ******************************entete projet******************************************************* -->
   <div class="mb-3 row">
-    <label for="inputPassword" class="col-sm-2 col-form-label">Projet:</label>
+    <h4 for="inputPassword" class="col-sm-2 col-form-label">Projet:</h4>
     <div class="col-sm-3">
       <p class="secteur_act form-control">Nom projet</p>
     </div>
-    <label for="inputPassword" class="col-sm-2 col-form-label">Secteur Activité:</label>
+    <h4 for="inputPassword" class="col-sm-2 col-form-label">Secteur Activité:</h4>
     <div class="col-sm-3">
       <p class="secteur_act form-control">Secteur Activité</p>
     </div>
-    <label for="inputText" class="col-sm-2 col-form-label" formControlName="dateD">Date:</label>
+    <h4 for="inputText" class="col-sm-2 col-form-label" name="dateD">Date:</h4>
     <div class="col-sm-3">
       <p class="secteur_act form-control">Date</p>
     </div>
@@ -17,18 +17,15 @@
   <!-- ******************************texetera************************************************************* -->
 
   <div class="form-floating">
-    <p class="presentation" placeholder="presentation" id="floatingTextarea2"
-      formControlName="description">
+    <p class="presentation" placeholder="presentation" id="floatingTextarea2" name="description">
       Presentation
-  </p>
-    <label for="floatingTextarea2">Inserez ici</label>
+    </p>
   </div>
+
   <div class="form-floating">
-    <p class="presentation" placeholder="presentation" id="floatingTextarea2"
-      formControlName="description">
+    <p class="presentation" placeholder="besoin" id="floatingTextarea2" name="besoin">
       Besoin
-  </p>
-    <label for="floatingTextarea2">Inserez ici</label>
+    </p>
   </div>
   <!-- ******************************radios buttun******************************************************** -->
 
@@ -45,12 +42,19 @@
       <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio3" value="option3">
       <label class="form-check-label" for="inlineRadio3">Abandonner Le Projet</label>
     </div>
-    <!-- <button class="w-100 btn btn-lg btn-primary"
-                type="submit"
-                >Création</button> -->
   </div>
-</div>
+
+  <div class="buttons">
+    <button type="button" class="btn btn-outline-secondary mr-2" placement="top" ngbTooltip="Supprimer le projet">
+      <i class="far fa-trash-alt"></i>
+    </button>
+    <button type="button" class="btn btn-outline-secondary mr-2" placement="top" ngbTooltip="Supprimer le projet">
+      <i class="fas fa-edit"></i>
+    </button>
+  </div>
+</form>
 <!-- ******************************Ajouter un nouveau projet**************************************************** -->
+<app-list-projet [listProject]="dataProject"></app-list-projet>
 <div class="nouveau-projet">
   <h4>Ajouter un nouveau projet</h4>
   <button type="button" class="btn btn-outline-secondary mr-2 buttonAdd" routerLink="/add-projet"
@@ -63,4 +67,3 @@
 <div class="d-grid gap-2 col-6 mx-auto history">
   <button type="button" class="btnbtn-outline-primary" routerLink="/historique" routerLinkActive="active">Historique</button>
 </div>
-<app-list-projet [listProject]="dataProject"></app-list-projet>
