--- a/src/app/component/register/register.component.html
+++ b/src/app/component/register/register.component.html
@@ -5,6 +5,17 @@
 
       <div class="form-floating">
         <input
+          type="text"
+          class="form-control"
+          id="floatingInput"
+          placeholder=""
+          formControlName="username"
+        />
+        <label for="floatingInput">username</label>
+      </div>
+
+      <div class="form-floating">
+        <input
           type="email"
           [ngClass]="{
             'is-invalid':
@@ -19,74 +30,19 @@
         />
         <label for="floatingInput">Adresse email</label>
       </div>
+
       <div class="form-floating">
-        <input
-          type="text"
-          class="form-control"
-          id="floatingInput"
-          placeholder=""
-          formControlName="username"
-        />
-        <label for="floatingInput">username</label>
+                <select aria-label="Default select example" class="form-control"
+                id="floatingInput"formControlName="role">
+                  <option selected>Selectionnez votre profil</option>
+                  <option value="moderator">Moderator</option>
+                  <option value="moderator">Admin</option>
+                  <option value="user">User</option>
+                  <option value="entrepreneur">Entrepreneur</option>
+                </select>
+                <label for="floatingInput">Role</label>
       </div>
-      <!-- <div class="form-floating">
-        <input
-          type="text"
-          class="form-control"
-          id="floatingInput"
-          placeholder=""
-          formControlName="lastName"
-        />
-        <label for="floatingInput">Nom</label>
-      </div> -->
-      <!-- <div class="form-floating">
-        <input
-          type="text"
-          class="form-control"
-          id="floatingInput"
-          placeholder=""
-          formControlName="username"
-        />
-        <label for="floatingInput">Pseudo</label>
-      </div> -->
-      <!-- <div class="form-floating">
-        <input
-          type="tel"
-          class="form-control"
-          id="floatingInput"
-          placeholder=""
-          formControlName="telephone"
-        />
-        <label for="floatingInput">Telephone</label>
-      </div> -->
-      <!-- <div class="form-floating">
-        <input
-          type="text"
-          class="form-control"
-          id="floatingInput"
-          placeholder=""
-          formControlName="presentation"
-        />
-        <label for="floatingInput">Presentation</label>
-      </div> -->
-      <!-- <div class="form-floating">
-        <input
-          type="text"
-          class="form-control"
-          id="floatingInput"
-          placeholder=""
-          formControlName="pays"
-        />
-        <label for="floatingInput">Pays</label>
-      </div> -->
-      <div class="form-floating">
-        <input type="text"
-                class="form-control"
-                id="floatingInput"
-                placeholder=""
-                formControlName="role">
-        <label for="floatingInput">Role</label>
-      </div>
+
       <div class="form-floating">
         <input
           type="password"
@@ -103,6 +59,7 @@
         />
         <label for="floatingInput">Mot de passe</label>
       </div>
+
       <button
         class="w-100 btn btn-lg btn-primary"
         type="submit"
@@ -115,7 +72,8 @@
       <hr>
       <p>Dejà inscrit ?
         <span>
-          <a href="http://" routerLink="/login" routerLinkActive="active">Connectez-vous
+          <a href="http://" routerLink="/login" routerLinkActive="active">
+            Connectez-vous
           </a>
         </span>
       </p>
