--- a/src/app/component/projet/edit-projet/edit-projet.component.html
+++ b/src/app/component/projet/edit-projet/edit-projet.component.html
@@ -1,1 +1,102 @@
-<p>edit-projet works!</p>
+<!--
+<h3>Nouveau projet</h3>
+<form class="container" (ngSubmit)="onSubmit()" [formGroup]="projetForm">
+******************************entete projet*******************************************************
+  <div class="mb-3 row">
+    <label for="inputPassword" class="col-sm-2 col-form-label">Projet:</label>
+    <div class="col-sm-3">
+      <input type="text" class="form-control" id="inputText" formControlName="name">
+    </div>
+    <label for="inputText" class="col-sm-2 col-form-label">Date:</label>
+    <div class="col-sm-3">
+      <input type="date" class="form-control" id="inputText"  formControlName="dateD">
+    </div>
+  </div>
+  ******************************texetera*************************************************************
+
+  <div class="form-floating">
+    <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea2"
+      formControlName="description"> </textarea>
+    <label for="floatingTextarea2">Présentation</label>
+  </div>
+  <div class="form-floating">
+    <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea2" formControlName="besoin"></textarea>
+    <label for="floatingTextarea2">Besoin</label>
+  </div>
+  ******************************Ajouter un nouveau projet****************************************************
+  <div class="buttons">
+    <button class="button"
+    type="submit">Modifier</button>
+    <button class="button"
+            type="submit" onclick="history.back(-1)">Annuler</button>
+  </div>
+  ******************************radios buttun********************************************************
+</form> -->
+
+<div class="login-form text-center">
+  <main class="form-signin">
+    <form class="container" (ngSubmit)="updateProj()" [formGroup]="projetForm">
+      <h1>Créer Votre projet !</h1>
+
+      <div class="form-floating">
+        <input type="number"
+                class="form-control"
+                id="floatingInput"
+                placeholder=""
+                formControlName="id">
+        <label for="floatingInput">id</label>
+      </div>
+
+      <div class="form-floating">
+        <input type="text"
+                class="form-control"
+                id="floatingInput"
+                placeholder=""
+                formControlName="name">
+        <label for="floatingInput">nom</label>
+      </div>
+      <div class="form-floating">
+        <input type="text"
+                class="form-control"
+                id="floatingInput"
+                placeholder=""
+                formControlName="description">
+        <label for="floatingInput">description</label>
+      </div>
+      <div class="form-floating">
+        <input type="text"
+                class="form-control"
+                id="floatingInput"
+                placeholder=""
+                formControlName="entrepreneur">
+        <label for="floatingInput">auteur</label>
+      </div>
+      <div class="form-floating">
+        <input type="text"
+                class="form-control"
+                id="floatingInput"
+                placeholder=""
+                formControlName="besoin">
+        <label for="floatingInput">besoin</label>
+      </div>
+
+      <div class="form-floating">
+        <input type="date"
+                class="form-control"
+                id="floatingInput"
+                placeholder=""
+                formControlName="dateD">
+        <label for="floatingInput">Date</label>
+      </div>
+
+      <div class="button">
+        <button class="w-100 btn btn-lg btn-primary"
+        type="submit"
+        >Création</button>
+        <button class="w-100 btn btn-lg btn-primary annuler"
+                type="submit" onclick="history.back(-1)">Annuler</button>
+      </div>
+    </form>
+    <hr>
+  </main>
+</div>
