--- a/src/app/component/projet/list-projet/list-projet.component.html
+++ b/src/app/component/projet/list-projet/list-projet.component.html
@@ -1,11 +1,6 @@
 <div class="list-feature" >
   <app-card-projet
     *ngFor="let projet of listProject"
-    [name]="projet.name"
-    [description]="projet.description"
-    [entrepreneur]="projet.entrepreneur"
-    [besoin]="projet.besoin"
-    [dateD]="projet.dateD"
-    [id]="projet._id">
+    [projet]="projet">
   </app-card-projet>
 </div>
