--- a/src/app/component/projet/list-projet/card-projet/card-projet.component.html
+++ b/src/app/component/projet/list-projet/card-projet/card-projet.component.html
@@ -1,21 +1,21 @@
 <div class="list-projets">
   <div class="container">
     <div class="entete">
-      <h2>Projet: <span>{{ name }}</span></h2>
+      <h2>Projet: <span>{{ projet?.name }}</span></h2>
     </div>
     <hr>
     <div class="content">
-      <h4>Entrepreneur: <span>{{ entrepreneur }}</span></h4>
-      <h4>Date de Début: <span>{{ dateD }}</span></h4>
-      <h4>Besoin: <span>{{ besoin }}</span></h4>
-      <h4>Description: <span>{{ description }}</span></h4>
+      <h4>Entrepreneur: <span>{{ projet?.entrepreneur }}</span></h4>
+      <h4>Date de Début: <span>{{ projet?.dateD }}</span></h4>
+      <h4>Besoin: <span>{{ projet?.besoin }}</span></h4>
+      <h4>Description: <span>{{ projet?.description }}</span></h4>
     </div>
     <div class="buttons">
       <button type="button" class="bouton">Contacter</button>
       <button type="button" class="bouton">Retour</button>
-      <button type="button" class="bouton">Modifier</button>
+      <button type="button" class="bouton" [routerLink]="['/edit-projet', projet?.id]">Modifier</button>
       <button type="button" class="bouton">Supprimer</button>
     </div>
   </div>
-
+<!-- edit-projet/:id -->
 </div>
