profil charge les bonnes infos

--- a/src/app/component/projet/edit-projet/edit-projet.component.html
+++ b/src/app/component/projet/edit-projet/edit-projet.component.html
@@ -89,11 +89,11 @@
         <label for="floatingInput">Date</label>
       </div>
 
-      <div class="button">
-        <button class="w-100 btn btn-lg btn-primary"
+      <div class="buttons">
+        <button class="button"
         type="submit"
-        >Création</button>
-        <button class="w-100 btn btn-lg btn-primary annuler"
+        >Modifier</button>
+        <button class="button"
                 type="submit" onclick="history.back(-1)">Annuler</button>
       </div>
     </form>
