--- a/src/app/component/projet/projet.component.html
+++ b/src/app/component/projet/projet.component.html
@@ -1,6 +1,6 @@
-<form class="container" (ngSubmit)="onSubmit()" [formGroup]="projectForm">
+<!-- <form class="container" (ngSubmit)="onSubmit()" [formGroup]="projectForm"> -->
   <!-- ******************************entete projet******************************************************* -->
-  <div class="mb-3 row">
+  <!-- <div class="mb-3 row">
     <h4 for="inputPassword" class="col-sm-2 col-form-label">Projet:</h4>
     <div class="col-sm-3">
       <p class="secteur_act form-control">Nom projet</p>
@@ -13,10 +13,10 @@
     <div class="col-sm-3">
       <p class="secteur_act form-control">Date</p>
     </div>
-  </div>
+  </div> -->
   <!-- ******************************texetera************************************************************* -->
 
-  <div class="form-floating">
+  <!-- <div class="form-floating">
     <p class="presentation" placeholder="presentation" id="floatingTextarea2" name="description">
       Presentation
     </p>
@@ -26,9 +26,9 @@
     <p class="presentation" placeholder="besoin" id="floatingTextarea2" name="besoin">
       Besoin
     </p>
-  </div>
+  </div> -->
   <!-- ******************************radios buttun******************************************************** -->
-
+<!--
   <div class="container-radio">
     <div class="form-check form-check-inline">
       <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1" checked>
@@ -52,7 +52,7 @@
       <i class="fas fa-edit"></i>
     </button>
   </div>
-</form>
+</form> -->
 <!-- ******************************Ajouter un nouveau projet**************************************************** -->
 <app-list-projet [listProject]="dataProject"></app-list-projet>
 <div class="nouveau-projet">
