--- a/src/app/component/reseau/reseau.component.html
+++ b/src/app/component/reseau/reseau.component.html
@@ -52,6 +52,7 @@
       </div>
     </div>
   </div> -->
-  <app-card></app-card>
+  
+  <app-list-projet [listProject]="dataProject"></app-list-projet>
 </div>
 
