--- a/src/app/component/home/home.component.html
+++ b/src/app/component/home/home.component.html
@@ -3,12 +3,12 @@
     <i class="fas fa-user"></i>  </div>
   <div class="bloc">
     <div class="infos">
-      <p>{{user?.username}}</p>
-      <p *ngFor="let role of user?.roles">Status {{ tolowerRole(role.name) }}</p>
-      <p>Adresse</p>
+      <p>USERNANE : ==> {{user?.username}}</p>
+      <p *ngFor="let role of user?.roles">STATUS : ==> {{ tolowerRole(role.name) }}</p>
+      <p>EMAIL : ==> {{user?.email}}</p>
     </div>
       <!-- ******************************presentation******************************************************** -->
-   
+
     <div class="presentation">
       <div class="mb-3">
         <label for="exampleFormControlTextarea1" class="form-label">Présentation: </label>
