update de son projet

--- a/src/app/component/projet/list-projet/list-projet.component.html
+++ b/src/app/component/projet/list-projet/list-projet.component.html
@@ -1,6 +1,6 @@
 <div class="list-feature" >
   <app-card-projet
-    *ngFor="let projet of listProject"
+    *ngFor="let projet of user?.projects"
     [projet]="projet">
   </app-card-projet>
 </div>
