--- a/src/app/component/projet/projet.component.html
+++ b/src/app/component/projet/projet.component.html
@@ -54,7 +54,7 @@
   </div>
 </form> -->
 <!-- ******************************Ajouter un nouveau projet**************************************************** -->
-<app-list-projet [listProject]="dataProject"></app-list-projet>
+<app-list-projet [user]="user"></app-list-projet>
 <div class="nouveau-projet">
   <h4>Ajouter un nouveau projet</h4>
   <button type="button" class="btn btn-outline-secondary mr-2 buttonAdd" routerLink="/add-projet"
