--- a/src/app/component/reseau/reseau.component.html
+++ b/src/app/component/reseau/reseau.component.html
@@ -52,7 +52,7 @@
       </div>
     </div>
   </div> -->
-  
-  <app-list-projet [listProject]="dataProject"></app-list-projet>
+
+  <!-- <app-list-projet [listProject]="dataProject"></app-list-projet> -->
 </div>
 
