--- a/src/app/component/admin/add-admin/add-admin.component.html
+++ b/src/app/component/admin/add-admin/add-admin.component.html
@@ -67,21 +67,21 @@
       </div>
       <div class="form-floating checkboxs">
         <div class="form-check">
-          <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+          <input class="form-check-input" type="checkbox" value="admin" id="flexCheckDefault">
           <label class="form-check-label" for="flexCheckDefault">
             Admin
           </label>
         </div>
         <div class="form-check">
-          <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" checked>
+          <input class="form-check-input" type="checkbox" value="moderator" id="flexCheckChecked" checked>
           <label class="form-check-label" for="flexCheckChecked">
-            Investisseur
+            Entrepreneur
           </label>
         </div>
         <div class="form-check">
-          <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" checked>
+          <input class="form-check-input" type="checkbox" value="user" id="flexCheckChecked" checked>
           <label class="form-check-label" for="flexCheckChecked">
-            Entrepreneur
+            Investisseur
           </label>
         </div>
       </div>
