--- a/src/app/component/layout/nav-bar/nav-bar.component.html
+++ b/src/app/component/layout/nav-bar/nav-bar.component.html
@@ -15,6 +15,9 @@
           <a class="nav-link" href="#" routerLink="/reseau" routerLinkActive="active">Reseau</a>
         </li>
         <li class="nav-item">
+          <a class="nav-link" href="#" routerLink="/home-admin" routerLinkActive="active">admin</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link" href="#" routerLink="/projet" routerLinkActive="active">Projet</a>
         </li>
         <li class="nav-item dropdown">
