--- a/src/app/component/admin/add-admin/add-admin.component.html
+++ b/src/app/component/admin/add-admin/add-admin.component.html
@@ -1,38 +1,7 @@
-<!-- <div class="container">
-  <form class="row" novalidate>
-    <div class="col-md-6">
-      <label for="validationCustom01" class="form-label">Pseudo</label>
-      <input type="text" class="form-control" id="validationCustom01" value="Mark" required>
-      <div class="valid-feedback">
-        Looks good!
-      </div>
-    </div>
-    <div class="col-md-6">
-      <label for="validationCustom02" class="form-label">Email</label>
-      <input type="text" class="form-control" id="validationCustom02" value="Otto" required>
-      <div class="valid-feedback">
-        Looks good!
-      </div>
-    </div>
-    <div class="col-md-6">
-      <label for="validationCustom04" class="form-label">Roles</label>
-      <select class="form-select" id="validationCustom04" required>
-        <option selected disabled value="">Investisseur</option>
-        <option>Entrepreneur</option>
-        <option>Admin</option>
-      </select>
-      <div class="invalid-feedback">
-        Please select a valid state.
-      </div>
-    </div>
-    <div class="col-12">
-      <button class="btn btn-primary" type="submit">Créer</button>
-    </div>
-  </form>
-</div> -->
+<!--
 <div class="login-form text-center">
   <main class="form-signin">
-    <form (ngSubmit)="onSubmit()">
+    <form (ngSubmit)="onSubmit()" [formGroup]="adminForm">
       <h1>Nouveau Admin</h1>
       <div class="form-floating">
         <input
@@ -51,6 +20,13 @@
           id="floatingInput"
           placeholder=""
           formControlName="email"
+          [ngClass]="{
+            'is-invalid':
+              (adminForm.get('email')?.dirty ||
+                adminForm.get('email')?.touched) &&
+              adminForm.get('email')?.invalid
+          }"
+
         />
         <label for="floatingInput">Adresse email</label>
       </div>
@@ -58,14 +34,19 @@
         <input
           type="password"
           class="form-control"
-
+          [ngClass]="{
+            'is-invalid':
+              (adminForm.get('password')?.dirty ||
+                adminForm.get('password')?.touched) &&
+              adminForm.get('password')?.invalid
+          }"
           id="floatingInput"
           placeholder=""
           formControlName="password"
         />
         <label for="floatingInput">Mot de passe</label>
       </div>
-      <div class="form-floating checkboxs">
+      <div class="form-floating checkboxs" *ngFor="let role of user?.roles">
         <div class="form-check">
           <input class="form-check-input" type="checkbox" value="admin" id="flexCheckDefault">
           <label class="form-check-label" for="flexCheckDefault">
@@ -73,13 +54,13 @@
           </label>
         </div>
         <div class="form-check">
-          <input class="form-check-input" type="checkbox" value="moderator" id="flexCheckChecked" checked>
+          <input class="form-check-input" type="checkbox" value="entrepreneur" id="flexCheckChecked" checked>
           <label class="form-check-label" for="flexCheckChecked">
             Entrepreneur
           </label>
         </div>
         <div class="form-check">
-          <input class="form-check-input" type="checkbox" value="user" id="flexCheckChecked" checked>
+          <input class="form-check-input" type="checkbox" value="investisseur" id="flexCheckChecked" checked>
           <label class="form-check-label" for="flexCheckChecked">
             Investisseur
           </label>
@@ -94,4 +75,4 @@
       </div>
     </form>
   </main>
-</div>
+</div> -->
