--- a/src/app/component/register/register.component.html
+++ b/src/app/component/register/register.component.html
@@ -35,9 +35,10 @@
                 <select aria-label="Default select example" class="form-control"
                 id="floatingInput"formControlName="role">
                   <option selected>Selectionnez votre profil</option>
-                  <option value="moderator">Moderator</option>
-                  <option value="moderator">Admin</option>
-                  <option value="user">User</option>
+                  <!-- <option value="user">User</option> -->
+                  <!-- <option value="moderator">Moderator</option> -->
+                  <!-- <option value="Admin">Admin</option> -->
+                  <option value="investisseur">Investisseur</option>
                   <option value="entrepreneur">Entrepreneur</option>
                 </select>
                 <label for="floatingInput">Role</label>
