--- a/src/app/component/reseau/reseau.component.html
+++ b/src/app/component/reseau/reseau.component.html
@@ -33,26 +33,50 @@
   </div>
   <!-- ********************************************************************************************************* -->
   <hr>
-  <!-- <app-user></app-user> -->
-  <!-- <div class="card mb-3" style="max-width: 540px;">
-    <div class="row g-0">
-      <div class="col-md-4">
-        <img src="../../assets/Fadimalogo3.png" class="img-fluid rounded-start" alt="...">
-      </div>
-      <div class="col-md-8">
-        <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-          <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-          <div class="d-grid gap-2 col-6 mx-auto history">
-            <button type="button" class="btnbtn-outline-primary" routerLink="/" routerLinkActive="active">Details</button>
-            <button type="button" class="btnbtn-outline-primary" routerLink="/contact" routerLinkActive="active">Contacter</button>
-          </div>
-        </div>
-      </div>
-    </div>
+  <!-- <div class="container">
+    <table class="table">
+      <thead>
+        <tr>
+          <th scope="col">Id</th>
+          <th scope="col">Name</th>
+          <th scope="col">Description</th>
+          <th scope="col">Besoin</th>
+          <th scope="col">Date de début</th>
+          <th scope="col">Entrepreneur</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor="let projet of dataProject">
+          <th scope="row">{{projet.id}}</th>
+          <td>{{projet.name}}</td>
+          <td>{{projet.description}}</td>
+          <td>{{projet.besoin}}</td>
+          <td>{{projet.dateD}}</td>
+          <td>{{projet.entrepreneur}}</td>
+        </tr>
+      </tbody>
+    </table>
   </div> -->
 
-  <!-- <app-list-projet [listProject]="dataProject"></app-list-projet> -->
+<div class="projet">
+  <div class="list-projets" *ngFor="let projet of dataProject">
+    <div class="container conteneur">
+      <div class="entete">
+        <h2>Projet: <span>{{projet.name}}</span></h2>
+      </div>
+      <hr>
+      <div class="content">
+        <h4>Entrepreneur: <span>{{ projet.entrepreneur }}</span></h4>
+        <h4>Date de Début: <span>{{ projet.dateD }}</span></h4>
+        <h4>Besoin: <span>{{ projet.besoin }}</span></h4>
+        <h4>Description: <span>{{  projet.description }}</span></h4>
+      </div>
+      <div class="buttons">
+        <button type="button" class="bouton">Contacter</button>
+        <button type="button" class="bouton">Retour</button>
+        <button type="button" class="bouton" >Modifier</button>
+        <button type="button" class="bouton" >Supprimer</button>
+      </div>
+    </div>
+  </div>
 </div>
-
