--- a/src/app/component/admin/admin-projet/admin-projet.component.scss
+++ b/src/app/component/admin/admin-projet/admin-projet.component.scss
@@ -33,7 +33,9 @@
   flex-wrap: wrap;
   justify-content: space-around;
   .list-projets{
-    max-width: 300px;
+    height: auto;
+    min-height: 300px;
+    width: 30%;
     border: 1px solid salmon;
     background-color: rgb(238, 234, 234);
     border-radius: 10px;
