--- a/src/app/component/edit-profil/edit-profil.component.html
+++ b/src/app/component/edit-profil/edit-profil.component.html
@@ -1,28 +1,54 @@
-<div class="container">
-  <div class="photo">
-    <img src="" alt="">
-  </div>
-  <div class="bloc">
-    <div class="infos">
-      <p>Nom Prenom</p>
-      <p>Status(Entrepreneur)</p>
-      <p>Adresse</p>
-    </div>
-      <!-- ******************************presentation******************************************************** -->
+<div class="login-form text-center">
+  <main class="form-signin">
+    <form (ngSubmit)="updateUser()" [formGroup]="userForm">
+      <h1>Créer ton compte !</h1>
 
-    <div class="presentation">
-      <div class="mb-3">
-        <label for="exampleFormControlTextarea1" class="form-label">Présentation: </label>
-        <textarea class="form-control" id="exampleFormControlTextarea1" rows="3">
-        </textarea>
+      <div class="form-floating">
+        <input
+          type="text"
+          class="form-control"
+          id="floatingInput"
+          placeholder=""
+          formControlName="username"
+        />
+        <label for="floatingInput">username</label>
       </div>
-    </div>
-    <div class="boutons">
-      <button class="bouton"
-      type="submit"
-      [disabled]="">Modifier</button>
-      <button class="bouton annuler"
-              type="submit" onclick="history.back(-1)">Annuler</button>
-    </div>
-  </div>
+
+      <div class="form-floating">
+        <input
+          type="email"
+          [ngClass]="{
+            'is-invalid':
+              (userForm.get('email')?.dirty ||
+              userForm.get('email')?.touched) &&
+              userForm.get('email')?.invalid
+          }"
+          class="form-control"
+          id="floatingInput"
+          placeholder=""
+          formControlName="email"
+        />
+        <label for="floatingInput">Adresse email</label>
+      </div>
+
+      <div class="form-floating">
+        <input
+          type="text"
+          class="form-control"
+          id="floatingInput"
+          placeholder=""
+          formControlName="presentation"
+        />
+        <label for="floatingInput">presentation</label>
+      </div>
+
+      <div class="buttons">
+        <button class="button"
+        type="submit"
+        >Modifier</button>
+        <button class="button"
+                type="submit" onclick="history.back(-1)">Annuler</button>
+      </div>
+    </form>
+  </main>
 </div>
