--- a/src/app/component/projet/list-projet/list-projet.component.html
+++ b/src/app/component/projet/list-projet/list-projet.component.html
@@ -1,6 +1,7 @@
 <div class="list-feature" >
   <app-card-projet
     *ngFor="let projet of user?.projects"
-    [projet]="projet">
+    [projet]="projet"
+    (idToDelete)="deleteProject($event, $event)">
   </app-card-projet>
 </div>
