--- a/src/app/component/register/register.component.html
+++ b/src/app/component/register/register.component.html
@@ -32,6 +32,17 @@
       </div>
 
       <div class="form-floating">
+        <input
+          type="text"
+          class="form-control"
+          id="floatingInput"
+          placeholder=""
+          formControlName="presentation"
+        />
+        <label for="floatingInput">presentation</label>
+      </div>
+
+      <div class="form-floating">
                 <select aria-label="Default select example" class="form-control"
                 id="floatingInput"formControlName="role">
                   <option selected>Selectionnez votre profil</option>
