--- a/src/app/component/home/home.component.html
+++ b/src/app/component/home/home.component.html
@@ -10,13 +10,13 @@
       <!-- ******************************presentation******************************************************** -->
 
     <div class="presentation">
-      <div class="mb-3">
+      <!-- <div class="mb-3"> -->
         <!-- <label for="exampleFormControlTextarea1" class="form-label">Présentation: </label>
         <textarea class="form-control" id="exampleFormControlTextarea1" rows="3">
         </textarea> -->
         <p>PRESENTATION : ==> {{user?.presentation}}</p>
 
-      </div>
+      <!-- </div> -->
     </div>
   </div>
     <button type="button" class="btn btn-outline-secondary mr-2" placement="top" ngbTooltip="Modifier le projet" routerLink="/edit-profil">
